@@ -9,14 +9,13 @@ import java.net.URI
 
 plugins {
     id("java")
-    id("idea")
     kotlin("jvm") version "2.2.0"
     id("com.gradleup.shadow") version "9.0.0-rc1"
     id("de.undercouch.download") version "5.6.0"
 }
 
 group = "org.xodium.vanillaplus"
-version = "1.14.3"
+version = "1.14.1"
 description = "Minecraft plugin that enhances the base gameplay."
 
 var author: String = "Xodium"
@@ -30,7 +29,7 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:$apiVersion-R0.1-SNAPSHOT")
-    compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.3.15-SNAPSHOT") //TODO("Move away from WorldEdit")
+    compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.3.15") //TODO("Move away from WorldEdit")
 
     implementation(kotlin("stdlib-jdk8"))
     implementation("org.jetbrains.kotlin:kotlin-reflect")
@@ -75,10 +74,6 @@ tasks {
     }
     jar { enabled = false }
     withType<JavaCompile> { options.encoding = "UTF-8" }
-    withType<Test> {
-        useJUnitPlatform()
-        jvmArgs("-XX:+EnableDynamicAgentLoading")
-    }
     register("printVersion") { doLast { println(version) } }
     register<Download>("downloadServerJar") {
         group = "application"
@@ -126,4 +121,3 @@ tasks {
     }
 }
 
-idea { module { excludeDirs.add(file(".server")) } }
